--- a/style/game.css
+++ b/style/game.css
@@ -19,6 +19,13 @@
 	top:0;
 	height:100%;
 }
+.gameover {
+	position: fixed;
+	width:100%;
+	height:100%;
+	background:rgba(0,0,0,0.2);
+	display:none;
+}
 
 #editor {
     border-top: 1px #555555 solid;
