--- a/style/game.css
+++ b/style/game.css
@@ -28,6 +28,48 @@
 	z-index:999999;
 }
 
+.gameover_panel {
+	width:250px;
+	height:150px;
+	position:fixed;
+	left:50%;
+	top:50%;
+	background:#6495ed;
+	color: #ffffff;
+	overflow-y: auto;
+	padding: 3em 2em;
+	z-index: 9999999;
+}
+
+.gameover_panel ul {
+			list-style: none;
+			padding: 0;
+		}
+
+			.gameover_panel ul > li {
+				border-top: solid 1px rgba(0, 0, 0, 0.125);
+				margin: 0.5em 0 0 0;
+				padding: 0.5em 0 0 0;
+			}
+
+				.gameover_panel ul > li:first-child {
+					border-top: 0 !important;
+					margin-top: 0 !important;
+					padding-top: 0 !important;
+				}
+
+				.gameover_panel ul > li > span {
+					display:inline-block;
+					width:40px;
+					margin-right:5em;
+
+				}
+				.gameover_panel ul > li > span:last-child {
+					margin-right:0 !important;
+
+				}
+
+
 #editor {
     border-top: 1px #555555 solid;
     position: absolute;
