--- a/style/repo.css
+++ b/style/repo.css
@@ -1,3 +1,8 @@
+	*, *:before, *:after {
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+	}
 #repo {
 		-moz-transform: translateX(-30em);
 		-webkit-transform: translateX(-30em);
